# cp313

./: README.md
assignment_1/: readme.md
assignment_1/code/: getData.py
assignment_2/: readme.md
assignment_2/turtlebot_kalman/: CMakeLists.txt  package.xml
assignment_2/turtlebot_kalman/launch/: beacon.world  turtlebot_beacon.launch
assignment_2/turtlebot_kalman/src/: beacon.py  example_subscribe.py  turtlemove.py
getting_started/gazebo_ros_setup_test/: readme.md  tbot_nav.py
hw_2/data/: cameraDistortion.txt  cameraMatrix.txt
