<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_kalman</name>
  <version>0.0.0</version>
  <description>The turtlebot_kalman package</description>
  <maintainer email="rakshitadmar@gmail.com">Rakshit</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <export>

  </export>
</package>
